# osbtlib

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.github/workflows/: actions.yml  release.yml
examples/idp/: covert_redirect.py
examples/op/: covert_redirect.py
examples/rp/: csrf.py  id_spoofing.py  id_spoofing_1.py  idp_confusion.py  malicious_endpoint.py  sso_flow.py
osbtlib/: __init__.py  attacker_op.py  browser.py  cli.py  exceptions.py  osbtlib.py  proxy.py  requestbin.py
src/: __main__.py  attacker_idp.py  browser.py  burp.py  proxy.py
src/utils/: id_token.py
tests/: __main__.py  server.py  test_attacker_idp.py  test_attacker_op.py  test_browser.py  test_id_token.py  test_proxy.py  test_utils.py
