[metadata]
name = osbtlib
version = 0.0.2
description = Scenario description library for oidc scenario based tester
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = oidc-scenario-based-tester
author_email = junki.yuasa@gmail.com

[options]
packages = find:
install_requires =
    auto_mix_prep >= 0.2.0
    playwright >= 1.35.0
    Requests >= 2.31.0